fixed light-dark mode bugs

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -39,7 +39,7 @@
   }
 
   .dark {
-    --background: 240 50% 3.9%;
+    --background: 210 50% 3%;
     --foreground: 0 0% 98%;
 
     --card: 240 10% 3.9%;
@@ -57,7 +57,7 @@
     --muted: 240 3.7% 15.9%;
     --muted-foreground: 240 5% 64.9%;
 
-    --accent: 240 3.7% 15.9%;
+    --accent: 240 3.7% 10.9%;
     --accent-foreground: 0 0% 98%;
 
     --destructive: 0 62.8% 30.6%;
